@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Official support of OS X (Darwin)
+* Options to limit the number of results for an incoming C-FIND query
 * Support of kFreeBSD
 
 
